# rustic-reader

./: .gitignore  Cargo.toml  README.md  index.node  package-lock.json  package.json
src/: errors.rs  lib.rs
src/card/: mod.rs  read.rs  read_ndef.rs
src/reader/: connect.rs
typescript/: index.js  index.ts  package-lock.json  package.json
typescript/types/: RusticReader.d.ts
