[package]
name = "rustic-reader"
version = "0.1.0"
description = "A Rust PCSC Reader"
authors = ["Tocka's Nest"]
license = "AGPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
pcsc = "2.8.2"
